<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#C11A1A"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-302dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_db"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Перейти до замовлення"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame1" />

                <FrameLayout
                    android:id="@+id/frame1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout4">

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/AmountText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Amount"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <SeekBar
                            android:id="@+id/seekBar2"
                            style="@style/Widget.AppCompat.SeekBar.Discrete"
                            android:layout_width="395dp"
                            android:layout_height="22dp"
                            android:max="10"
                            android:progress="3"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/AmountText" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/SImpletext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/pizzaConstruct"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/enterPizza"
                            android:layout_width="218dp"
                            android:layout_height="56dp"
                            android:layout_marginStart="16dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/Name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/Simpletext2" />

                        <TextView
                            android:id="@+id/Simpletext2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/enterName"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/SImpletext" />

                        <TextView
                            android:id="@+id/resultText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/enterPizza" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="409dp"
                            android:layout_height="5dp"
                            android:layout_marginTop="24dp"
                            android:background="?android:attr/listDivider"
                            android:divider="@color/purple_700"
                            android:scrollbarThumbHorizontal="@color/purple_200"
                            android:scrollbarThumbVertical="@color/purple_200"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/resultText" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/paymentType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/paymentType"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <CheckBox
                            android:id="@+id/checkBoxCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkBoxCard"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/checkBoxCupon"
                            app:layout_constraintStart_toStartOf="parent" />

                        <CheckBox
                            android:id="@+id/checkBoxCupon"
                            android:layout_width="182dp"
                            android:layout_height="52dp"
                            android:text="@string/checkBoxCupon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/paymentType" />

                        <CheckBox
                            android:id="@+id/checkBoxCash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkBoxCash"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/checkBoxCupon" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/okButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:text="@string/ButtonName"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:text="Змінити дані"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/pizzaSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <CheckBox
                            android:id="@+id/checkBoxSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkBoxSmall"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/checkBoxMedium"
                            app:layout_constraintStart_toStartOf="parent" />

                        <CheckBox
                            android:id="@+id/checkBoxMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkBoxMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/pizzaSize" />

                        <CheckBox
                            android:id="@+id/checkBoxBig"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkBoxBig"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/checkBoxMedium" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>